<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/unexpected_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unexpected_error"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/error_log_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/ask_for_error_log"
                android:textSize="18sp"/>

            <ImageView
                android:contentDescription="@string/app_name"
                tools:src="@drawable/crash_bg"
                android:id="@+id/background_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_view_error_log"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/view_error_log"/>

            <Button
                android:id="@+id/button_copy_error_log"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/copy_error_log"/>

            <Button
                android:id="@+id/button_share_error_log"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/share_error_log"/>

            <Button
                android:id="@+id/button_email_error_log"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email_error_log"/>

            <Button
                android:id="@+id/button_save_error_log"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/save_error_log"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_close_app"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/close_app"/>

    <TextView
        android:id="@+id/copyright_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        tools:text="@string/copyright_info"
        android:textSize="12sp"/>

</LinearLayout>
